--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
   <div id="app"></div>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="/bundle.js"></script>
-  
 </body>
 
 </html>
