Nav highlighted routes

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Indecision</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/ico" href="images/favicon.ico"/>
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
+
+  <title>Expensify</title>
 </head>
 <body>
   <div id="app"></div>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="/bundle.js"></script>
 </body>
 
