--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Expensify</title>
-  <link rel="stylesheet" type="text/css" href="./styles.css"
+  <link rel="stylesheet" type="text/css" href="./styles.css"/>
 </head>
 <body>
   <div id="app"></div>
   <script src="/bundle.js"></script>
+  
 </body>
 
 </html>
