--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Expensify</title>
+  <title>Expense Tracker</title>
   <link rel="stylesheet" type="text/css" href="/dist/styles.css"/>
 </head>
 <body>
